<resources>
    <string name="app_name">Порт Севкабель</string>
    <string name="title_news">Лента событий</string>
    <string name="title_map">Карта</string>
    <string name="title_profile">Профиль</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Карта</string>
    <string name="search_bar">Поиск по названию</string>
    <string name="calendar_bar">Выберите дату</string>
    <string name="sing_in_with_vk_button">Войти</string>
    <string name="main">Основное</string>
    <string name="title">Название</string>
    <string name="text">Описание</string>
    <string name="event">Событие</string>
    <string name="food">Фудкорт</string>
    <string name="addmarker">Добавить маркер</string>
    <string name="sub">Тип маркера</string>
    <string name="admint">Сейчас вы можете двигать маркеры по карте</string>
    <string name="adminf">Вы вышли из режима редактирования маркеров</string>
    <string name="valid">Ошибка! Проверьте введенные данные.</string>
    <string name="accept">Подтверждение</string>
    <string name="acceptmessage">Вы уверены, что хотите удалить данный маркер?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ref">Редактирование</string>
    <integer name="com_vk_sdk_AppId">6746743</integer>
    <string name="events_where_i_was">Мероприятия, на которых я был:</string>
    <string name="review">Оставить отзыв</string>
    <string name="comment">Оставить отзыв</string>
    <string name="hide">Скрыть</string>
    <string name="comm">Спасибо за отзыв!</string>
    <string name="send">Отправить</string>
    <string name="add">Добавить</string>
    <string name="req">Ваш запрос отправлен на модерацию</string>
    <string name="sendreq">Отправить заявку</string>
    <string name="titlen">Заголовок</string>
</resources>
